[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kahu-vessel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kahu-relay  = "relay.relay:main"
kahu-daemon = "daemon.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["relay*", "daemon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["relay/tests", "daemon/tests"]

[tool.uv.dev-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
